PHP 4.0 CHANGE LOG                                                    ChangeLog
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

?? ?? 1999, Version 4.0 Beta 3
- Added support for transparent session id propagation (Sascha)
- Made WDDX serialize object properties properly (Andrey)
- Fixed WDDX mem leak when undefined variable is passed in
  for serialization (Andrey)
- Added session_unset() function (Andrey)
- Fixed double session globals shutdown crash (Andrey)
- Fixed crash related to ignore_user_abort ini entry (Andrey)
- Added support for external entropy sources for session id creation 
  (on Unices /dev/random and /dev/urandom) (Sascha)
- Added gpc_globals variable directive to php.ini.  By default it is On, but
  if it is set to Off, GET, POST and Cookie variables will not be inserted
  to the global scope.  Mostly makes sense when coupled with track_vars (Zeev)
- Added versioning support for shared library (Sascha)
  This allows concurrent use of PHP3 and PHP4 as Apache modules. See
  the end of the INSTALL file for more information.
- Added second parameter to array_keys which specifies search value
  for which the key should be returned (Andrey)
- Resourcified Informix driver (Danny)
- New resource handling for odbc, renamed to php_odbc.[ch]
- Make set_time_limit() work on Unix (Rasmus)
- Add connection handling support (Rasmus)
- Improved the Sybase-CT module to make use of resources (Zeev)
- Improved the mSQL module to make use of resources (Zeev)
- Changed mysql_query() and mysql_db_query() to return false in case of saving
  the result set data fails (Zeev)
- Improved the resource mechanism - resources were not getting freed as soon
  as they could (Zeev)
- Added shared memory module for session data storage (Sascha)
- Fixed session.auto_start (Sascha)
- Fixed several problems with output buffering and HEAD requests (Zeev)
- Fixed HTTP Status code issue with ISAPI module (Zeev)